--- a/wp-cli.yml
+++ b/wp-cli.yml
@@ -1,5 +1,5 @@
 require:
-  # - vendor/mccomaschris/parkour/src/class-blockcommand.php
+  - vendor/mccomaschris/parkour/src/class-blockcommand.php
 
 path: web/wp
 server:
