--- a/web/app/themes/mfa/.gitignore
+++ b/web/app/themes/mfa/.gitignore
@@ -2,3 +2,12 @@
 /vendor/
 /wordpress/
 .phpunit.result.cache
+node_modules/
+.env
+.env.*.local
+.DS_Store
+npm-debug.log*
+/vendor/
+/node_modules/
+/web/app/themes/*/vendor/
+/web/app/themes/*/node_modules/
