--- a/web/app/themes/mfa/composer.json
+++ b/web/app/themes/mfa/composer.json
@@ -11,11 +11,16 @@
    "squizlabs/php_codesniffer": "@stable",
     "wp-coding-standards/wpcs": "^3.1",
     "dealerdirect/phpcodesniffer-composer-installer": "^0.7.1",
-    "php-stubs/acf-pro-stubs": "^6.0"
+    "php-stubs/acf-pro-stubs": "^6.0",
+    "phpcompatibility/phpcompatibility-wp": "^2.1",
+    "phpstan/phpstan": "^2.0",
+    "szepeviktor/phpstan-wordpress": "^1.3"
   },
   "scripts": {
-		"format": "phpcbf  --extensions=php --standard=phpcs.xml.dist --report-summary --report-source",
-		"lint": "phpcs --extensions=php --standard=phpcs.xml.dist"
+	"format": "phpcbf  --extensions=php --standard=phpcs.xml.dist --report-summary --report-source",
+	"lint": "phpcs --extensions=php --standard=phpcs.xml.dist",
+	"analyse": "phpstan analyse",
+	"twig-lint": "find views -name '*.twig' -exec php -l {} \\;"
 	},
 	"autoload": {
 		"classmap": [
