--- a/web/app/themes/mfa/package.json
+++ b/web/app/themes/mfa/package.json
@@ -7,7 +7,8 @@
   "devDependencies": {
     "@tailwindcss/cli": "^4.1.11",
     "@tailwindcss/postcss": "^4.0.0",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+	"lefthook": "^1.13.6"
   },
   "dependencies": {
     "@alpinejs/collapse": "^3.14.1",
