--- a/web/app/themes/mfa/phpcs.xml.dist
+++ b/web/app/themes/mfa/phpcs.xml.dist
@@ -1,32 +1,26 @@
 <?xml version="1.0"?>
-<ruleset>
-	<!-- Files or directories to check -->
-	<file>.</file>
+<ruleset name="WordPress Coding Standards">
+    <description>WordPress Coding Standards for the MFA theme</description>
 
-	<exclude-pattern>*/node_modules/*</exclude-pattern>
-   <exclude-pattern>*/wordpress/*</exclude-pattern>
-	<exclude-pattern>*/vendor/*</exclude-pattern>
-   <exclude-pattern>*/resources/*</exclude-pattern>
-	<exclude-pattern>*/dist/*</exclude-pattern>
-	<exclude-pattern>*/tests/*</exclude-pattern>
+    <!-- Use WordPress coding standards -->
+    <rule ref="WordPress"/>
+    <rule ref="WordPress-Core"/>
+    <rule ref="WordPress-Docs"/>
+    <rule ref="WordPress-Extra"/>
 
-	<!-- Path to strip from the front of file paths inside reports (displays shorter paths) -->
-	<arg name="basepath" value="." />
+    <!-- Check PHP 8.1+ compatibility -->
+    <config name="testVersion" value="8.1-"/>
 
-	<!-- Set a minimum PHP version for PHPCompatibility -->
-	<config name="testVersion" value="8.1-" />
+    <!-- Paths to scan (now relative to theme root) -->
+    <file>.</file>
 
-	<!-- Use 10up's phpcs ruleset -->
-	<rule ref="10up-Default">
-		<exclude name="Squiz.Commenting.FileComment.MissingPackageTag"/>
-		<exclude name="WordPress.WP.I18n.MissingTranslatorsComment"/>
-	</rule>
-
-	<!-- Set the text domain to timber-starter -->
-	<rule ref="WordPress.WP.I18n">
-		<properties>
-			<property name="text_domain" type="array" value="timber-starter"/>
-		</properties>
-	</rule>
-
+    <!-- Exclude patterns -->
+    <exclude-pattern>vendor/*</exclude-pattern>
+    <exclude-pattern>node_modules/*</exclude-pattern>
+    <exclude-pattern>assets/*</exclude-pattern>
+    <exclude-pattern>styles/*</exclude-pattern>
+    <exclude-pattern>views/*</exclude-pattern>
+    <exclude-pattern>acf-json/*</exclude-pattern>
+    <exclude-pattern>*.min.js</exclude-pattern>
+    <exclude-pattern>*.min.css</exclude-pattern>
 </ruleset>
