--- a/web/app/themes/mfa/composer.json
+++ b/web/app/themes/mfa/composer.json
@@ -11,10 +11,7 @@
    "squizlabs/php_codesniffer": "@stable",
     "wp-coding-standards/wpcs": "^3.1",
     "dealerdirect/phpcodesniffer-composer-installer": "^0.7.1",
-    "php-stubs/acf-pro-stubs": "^6.0",
-    "phpcompatibility/phpcompatibility-wp": "^2.1",
-    "phpstan/phpstan": "^2.0",
-    "szepeviktor/phpstan-wordpress": "^2.0"
+    "php-stubs/acf-pro-stubs": "^6.0"
   },
   "scripts": {
 	"format": "phpcbf  --extensions=php --standard=phpcs.xml.dist --report-summary --report-source",
